--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -18,17 +18,23 @@
         android:layout_marginTop="50sp"
     />
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@id/homePageTitle"
+    android:layout_above="@id/bottomAppBar" >
 
     <ListView
         android:id="@+id/entryListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/homePageTitle"
-        android:layout_above="@id/bottomAppBar"
         android:layout_marginTop="3sp"
-        android:dividerHeight="3sp"
-        android:divider="@color/darkGray"
+        android:dividerHeight="1sp"
+        android:divider="@color/gray"
+        android:layout_weight="1"
     />
+
+</LinearLayout>
 
 
 
