cleaned up margins with bottom app bar on home page

--- a/app/src/main/res/layout/entry_item.xml
+++ b/app/src/main/res/layout/entry_item.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="100sp"
-    android:padding="15sp" >
+    android:layout_height="wrap_content"
+    android:padding="10sp" >
 
     <TextView
         android:id="@+id/entryItemTitle"
@@ -25,7 +25,6 @@
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:layout_marginTop="2sp"
         android:layout_below="@id/entryItemTitle"
         android:layout_alignParentLeft="true"
     />
