--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -15,20 +15,20 @@
         android:textSize="75sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="45sp"
     />
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@id/homePageTitle"
-    android:layout_above="@id/bottomAppBar" >
+    android:layout_above="@id/bottomAppBar"
+    android:layout_marginTop="3sp" >
 
     <ListView
         android:id="@+id/entryListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="3sp"
         android:dividerHeight="1sp"
         android:divider="@color/gray"
         android:layout_weight="1"
@@ -42,15 +42,13 @@
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10sp"
-        android:layout_marginBottom="10sp"
         android:layout_alignParentBottom="true">
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addEntryFab"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60sp"
             android:layout_gravity="bottom|end"
             android:src="@drawable/plus_symbol"
             android:layout_margin="16sp"
@@ -61,7 +59,7 @@
 
         <Button
             android:id="@+id/logoutButton"
-            android:layout_width="110sp"
+            android:layout_width="wrap_content"
             android:layout_height="60sp"
             android:text="Logout"
             android:textSize="18sp"
