--- a/app/src/main/res/layout/entry_item.xml
+++ b/app/src/main/res/layout/entry_item.xml
@@ -12,7 +12,7 @@
         android:text="Title"
         android:textStyle="bold"
         android:maxLines="1"
-        android:textColor="@color/black"
+        style="@style/TEXT_COLOR"
         android:textSize="25sp"
         android:layout_alignParentLeft="true"
     />
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="Created On"
         android:maxLines="1"
-        android:textColor="@color/black"
+        style="@style/TEXT_COLOR"
         android:textSize="20sp"
         android:layout_below="@id/entryItemTitle"
         android:layout_alignParentLeft="true"
