--- a/app/src/main/res/layout/starting_activity.xml
+++ b/app/src/main/res/layout/starting_activity.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".StartingActivity"
     android:layout_centerInParent="true"
-    android:background="@drawable/gradient_background" >
+    style="@style/SCREEN" >
 
     <TextView
         android:id="@+id/diaryText"
@@ -18,6 +18,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="130sp"
+        style="@style/TEXT_COLOR"
     />
 
     <TextView
@@ -28,6 +29,7 @@
         android:textSize="25sp"
         android:layout_below="@+id/diaryText"
         android:layout_centerHorizontal="true"
+        style="@style/TEXT_COLOR"
     />
 
     <EditText
@@ -39,6 +41,7 @@
         android:layout_centerHorizontal="true"
         android:hint="Enter username"
         android:inputType="text"
+        style="@style/TEXT_COLOR"
     />
 
     <EditText
@@ -50,6 +53,7 @@
         android:layout_centerHorizontal="true"
         android:hint="Enter password"
         android:inputType="textPassword"
+        style="@style/TEXT_COLOR"
     />
 
     <Button
@@ -62,6 +66,7 @@
         android:layout_marginTop="25sp"
         android:layout_centerHorizontal="true"
         android:onClick="VerifyUser"
+        style="@style/BUTTON"
     />
 
     <TextView
@@ -72,7 +77,7 @@
         android:layout_below="@id/loginButton"
         android:layout_marginTop="25sp"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/black"
+        style="@style/TEXT_COLOR"
         android:textSize="20sp"
         android:onClick="SignUp"
         android:clickable="true"
