--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,28 @@
     <style name="Base.Theme.FinalProjectCS373" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="SCREEN">
+        <item name="android:background">
+            @drawable/gradient_background_dark
+        </item>
+    </style>
+
+    <style name="TEXT_COLOR">
+        <item name="android:textColor"> #D1CFCF </item>
+        <item name="android:textColorHint"> #D1CFCF </item>
+    </style>
+
+    <style name="BUTTON">
+        <item name="backgroundTint">
+            @color/purple
+        </item>
+        <item name="android:textColor">
+            @color/white
+        </item>
+    </style>
+
 </resources>
