--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Base.Theme.FinalProjectCS373" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -8,4 +8,35 @@
     </style>
 
     <style name="Theme.FinalProjectCS373" parent="Base.Theme.FinalProjectCS373" />
+
+
+    <style name="SCREEN">
+        <item name="android:background">
+            @drawable/gradient_background_light
+        </item>
+    </style>
+
+    <style name="TEXT_COLOR">
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textColorHint">
+            @color/black
+        </item>
+    </style>
+
+    <style name="BUTTON">
+        <item name="backgroundTint">
+            @color/white
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+    </style>
+
+    <style name="DIVIDER_COLOR">
+        <item name="android:divider">
+            @color/gray
+        </item>
+    </style>
 </resources>
