--- a/app/src/main/res/layout-land/signup_activity.xml
+++ b/app/src/main/res/layout-land/signup_activity.xml
@@ -13,7 +13,7 @@
         android:textSize="100sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="130sp"
+        android:layout_marginTop="30sp"
         style="@style/TEXT_COLOR"
     />
 
@@ -22,18 +22,18 @@
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:layout_below="@id/signupText"
-        android:layout_marginTop="25sp"
+        android:layout_marginTop="10sp"
         android:layout_centerHorizontal="true"
         android:hint="Enter username"
         style="@style/TEXT_COLOR"
-        />
+    />
 
     <EditText
         android:id="@id/passwordSignupInput"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:layout_below="@id/usernameSignupInput"
-        android:layout_marginTop="25sp"
+        android:layout_marginTop="10sp"
         android:layout_centerHorizontal="true"
         android:hint="Enter password"
         android:inputType="textPassword"
@@ -44,7 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordSignupInput"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20sp" >
 
     <Button
         android:id="@+id/signupButton"
@@ -52,7 +53,6 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:textSize="20sp"
-        android:layout_marginTop="25sp"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10sp"
         style="@style/BUTTON"
@@ -64,7 +64,6 @@
         android:layout_height="wrap_content"
         android:text="Cancel"
         android:textSize="20sp"
-        android:layout_marginTop="25sp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10sp"
         android:onClick="ReturnToLogin"
