--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -56,6 +56,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10sp"
         style="@style/BUTTON"
+        android:onClick="SignUpUser"
     />
 
     <Button
